@@ -1,7 +1,10 @@
 package rbasamoyai.createbigcannons.cannon_control.cannon_mount;
 
-import com.simibubi.create.foundation.utility.Components;
+import java.util.List;
 
+import javax.annotation.Nullable;
+
+import com.simibubi.create.foundation.utility.Components;
 import com.simibubi.create.foundation.utility.Lang;
 
 import net.minecraft.ChatFormatting;
@@ -10,12 +13,9 @@ import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
 import rbasamoyai.createbigcannons.CreateBigCannons;
 import rbasamoyai.createbigcannons.cannon_control.contraption.AbstractMountedCannonContraption;
+import rbasamoyai.createbigcannons.cannon_control.contraption.MountedAutocannonContraption;
 import rbasamoyai.createbigcannons.cannon_control.contraption.MountedBigCannonContraption;
 import rbasamoyai.createbigcannons.cannon_control.contraption.PitchOrientedContraptionEntity;
-
-import javax.annotation.Nullable;
-
-import java.util.List;
 
 public interface ExtendsCannonMount {
 
@@ -26,6 +26,8 @@ public interface ExtendsCannonMount {
 	MutableComponent cannonPitchComponent = Components.translatable(CreateBigCannons.MOD_ID + ".goggles.cannon_mount.pitch");
 	MutableComponent bigCannonStrengthComponent = Components.translatable(CreateBigCannons.MOD_ID + ".goggles.cannon_mount.cannon_strength");
 	String bigCannonStrengthValueKey = CreateBigCannons.MOD_ID + ".goggles.cannon_mount.cannon_strength.value";
+	MutableComponent autocannonRPMComponent = Components.translatable(CreateBigCannons.MOD_ID + ".goggles.cannon_mount.autocannon_rate_of_fire");
+	String autocannonRPMValueKey = CreateBigCannons.MOD_ID + ".goggles.cannon_mount.autocannon_rate_of_fire.value";
 
 	static void addCannonInfoToTooltip(List<Component> tooltip, @Nullable PitchOrientedContraptionEntity mountedContraption) {
 		if (mountedContraption != null && mountedContraption.getContraption() instanceof AbstractMountedCannonContraption cannon) {
@@ -43,6 +45,10 @@ public interface ExtendsCannonMount {
 			if (cannon instanceof MountedBigCannonContraption bigCannon) {
 				Lang.builder().add(bigCannonStrengthComponent.copy().withStyle(ChatFormatting.GRAY)
 					.append(Components.translatable(bigCannonStrengthValueKey, bigCannon.getMaxSafeCharges()).withStyle(ChatFormatting.WHITE)))
+				.forGoggles(tooltip);
+			} else if (cannon instanceof MountedAutocannonContraption autocannon) {
+				Lang.builder().add(autocannonRPMComponent.copy().withStyle(ChatFormatting.GRAY)
+					.append(Components.translatable(autocannonRPMValueKey, autocannon.getReferencedFireRate()).withStyle(ChatFormatting.WHITE)))
 				.forGoggles(tooltip);
 			}
 		} else {
