@@ -58,6 +58,8 @@
   "block.createbigcannons.cannon_builder_head": "Cannon Builder Head",
   "block.createbigcannons.cannon_carriage": "Cannon Carriage",
   "block.createbigcannons.cannon_carriage.hotbar.fireRate": "Rate of fire: %s RPM",
+  "block.createbigcannons.cannon_carriage.hotbar.fireRate.createbigcannons.cannon_carriage": "Rate of fire: %s RPM (scroll to change)",
+  "block.createbigcannons.cannon_carriage.hotbar.fireRate.createbigcannons.cannon_mount": "Rate of fire: %s RPM (set signal strength on firing side to change)",
   "block.createbigcannons.cannon_carriage.tooltip": "CANNON_CARRIAGE",
   "block.createbigcannons.cannon_carriage.tooltip.action1": "Changes the rate of fire of a mounted autocannon if present.",
   "block.createbigcannons.cannon_carriage.tooltip.behaviour1": "Assembles or disassembles the carriage. The carriage does not need to have a cannon mounted.",
@@ -239,6 +241,8 @@
   "createbigcannons.display_source.cannon_mount.pitch": "Cannon Pitch",
   "createbigcannons.display_source.cannon_mount.yaw": "Cannon Yaw",
   "createbigcannons.display_source.cannon_mount_source": "From Cannon Mount",
+  "createbigcannons.goggles.cannon_mount.autocannon_rate_of_fire": "Autocannon Rate of Fire: ",
+  "createbigcannons.goggles.cannon_mount.autocannon_rate_of_fire.value": "%s RPM",
   "createbigcannons.goggles.cannon_mount.cannon_strength": "Cannon Strength: ",
   "createbigcannons.goggles.cannon_mount.cannon_strength.value": "%s Propellant Stress",
   "createbigcannons.goggles.cannon_mount.no_cannon_present": "No Cannon present",
