@@ -133,8 +133,8 @@ c58a162ab33e2d4841b7ccde59fa022506ef5dcc assets/createbigcannons/blockstates/ver
 8cc31b88cd6093baa4caddb02ff7f7ff793299f4 assets/createbigcannons/blockstates/wrought_iron_cannon_end.json
 303668cdb3754018ca137ea6074801c6927d3987 assets/createbigcannons/blockstates/wrought_iron_drop_mortar_end.json
 d942040026b2849ca2153a9933e8dc0c5c39f3c9 assets/createbigcannons/blockstates/yaw_controller.json
-e2fbda48035a6b868fd992c3ee9a2967531187b7 assets/createbigcannons/lang/en_ud.json
-a7a76bcd9dc31c3c9253c4eb621b0e07d1561888 assets/createbigcannons/lang/en_us.json
+d8f50adca30fa0a7711a61bf9fb7685e8f31fd69 assets/createbigcannons/lang/en_ud.json
+970dbd4305191d2d0a4e2fc1b0dc63a01320ec4d assets/createbigcannons/lang/en_us.json
 c6129d8380bcb26579fc200fc054f4a485ad9b2a assets/createbigcannons/models/block/ap_shell.json
 14e7b948a05007b8c96e35f92f0bff66427de7b8 assets/createbigcannons/models/block/ap_shot.json
 7157cc923bd4f217cb47117fbfe2b9542e367d17 assets/createbigcannons/models/block/autocannon/bronze_autocannon_spring.json
