@@ -58,6 +58,8 @@
   "block.createbigcannons.cannon_builder_head": "p\u0250\u01DDH \u0279\u01DDp\u05DF\u0131n\u15FA uouu\u0250\u0186",
   "block.createbigcannons.cannon_carriage": "\u01DDb\u0250\u0131\u0279\u0279\u0250\u0186 uouu\u0250\u0186",
   "block.createbigcannons.cannon_carriage.hotbar.fireRate": "W\u0500\u1D1A %s :\u01DD\u0279\u0131\u025F \u025Fo \u01DD\u0287\u0250\u1D1A",
+  "block.createbigcannons.cannon_carriage.hotbar.fireRate.createbigcannons.cannon_carriage": ")\u01DDbu\u0250\u0265\u0254 o\u0287 \u05DF\u05DFo\u0279\u0254s( W\u0500\u1D1A %s :\u01DD\u0279\u0131\u025F \u025Fo \u01DD\u0287\u0250\u1D1A",
+  "block.createbigcannons.cannon_carriage.hotbar.fireRate.createbigcannons.cannon_mount": ")\u01DDbu\u0250\u0265\u0254 o\u0287 \u01DDp\u0131s bu\u0131\u0279\u0131\u025F uo \u0265\u0287bu\u01DD\u0279\u0287s \u05DF\u0250ub\u0131s \u0287\u01DDs( W\u0500\u1D1A %s :\u01DD\u0279\u0131\u025F \u025Fo \u01DD\u0287\u0250\u1D1A",
   "block.createbigcannons.cannon_carriage.tooltip": "\u018E\u2141\u2C6FI\u1D1A\u1D1A\u2C6F\u0186\u203ENONN\u2C6F\u0186",
   "block.createbigcannons.cannon_carriage.tooltip.action1": "\u02D9\u0287u\u01DDs\u01DD\u0279d \u025F\u0131 uouu\u0250\u0254o\u0287n\u0250 p\u01DD\u0287uno\u026F \u0250 \u025Fo \u01DD\u0279\u0131\u025F \u025Fo \u01DD\u0287\u0250\u0279 \u01DD\u0265\u0287 s\u01DDbu\u0250\u0265\u0186",
   "block.createbigcannons.cannon_carriage.tooltip.behaviour1": "\u02D9p\u01DD\u0287uno\u026F uouu\u0250\u0254 \u0250 \u01DD\u028C\u0250\u0265 o\u0287 p\u01DD\u01DDu \u0287ou s\u01DDop \u01DDb\u0250\u0131\u0279\u0279\u0250\u0254 \u01DD\u0265\u27D8 \u02D9\u01DDb\u0250\u0131\u0279\u0279\u0250\u0254 \u01DD\u0265\u0287 s\u01DD\u05DFq\u026F\u01DDss\u0250s\u0131p \u0279o s\u01DD\u05DFq\u026F\u01DDss\u2C6F",
@@ -239,6 +241,8 @@
   "createbigcannons.display_source.cannon_mount.pitch": "\u0265\u0254\u0287\u0131\u0500 uouu\u0250\u0186",
   "createbigcannons.display_source.cannon_mount.yaw": "\u028D\u0250\u028E uouu\u0250\u0186",
   "createbigcannons.display_source.cannon_mount_source": "\u0287unoW uouu\u0250\u0186 \u026Fo\u0279\u2132",
+  "createbigcannons.goggles.cannon_mount.autocannon_rate_of_fire": " :\u01DD\u0279\u0131\u2132 \u025Fo \u01DD\u0287\u0250\u1D1A uouu\u0250\u0254o\u0287n\u2C6F",
+  "createbigcannons.goggles.cannon_mount.autocannon_rate_of_fire.value": "W\u0500\u1D1A %s",
   "createbigcannons.goggles.cannon_mount.cannon_strength": " :\u0265\u0287bu\u01DD\u0279\u0287S uouu\u0250\u0186",
   "createbigcannons.goggles.cannon_mount.cannon_strength.value": "ss\u01DD\u0279\u0287S \u0287u\u0250\u05DF\u05DF\u01DDdo\u0279\u0500 %s",
   "createbigcannons.goggles.cannon_mount.no_cannon_present": "\u0287u\u01DDs\u01DD\u0279d uouu\u0250\u0186 oN",
