@@ -35,6 +35,7 @@ Added:
 - Added cannon pitch config for different cannon mounts and different cannon types
 - Added Flak explosion config
 - Added crafting table munition disassembly for fuzes and tracers on autocannon rounds
+- Added autocannon RPM display to cannon mount tooltip and action bar when controlling autocannon
 [Fabric] - Added REI compatibility
 [Fabric] - Added EMI compatibility
 [Forge] - Added block properties compatibility with Framed Blocks
